--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<title>p5sulaiman</title>
-
-	<script src="libraries/p5.js"></script>
-	<script src="libraries/p5.dom.js"></script>
-	<script src="libraries/p5.sound.js"></script>
-	<script src="sketch.js"></script>
-
-	<style>
-		body {
-			margin:0;
-			padding:0;
-			overflow: hidden;
-		}
-		canvas {
-			margin:auto;
-		}
-	</style>
 </head>
+
 <body>
+	<h2>Module 8</h2>
+	<ul>
+		<li>
+			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a>
+		</li>
+	</ul>
+	<h2>Module 9</h2>
+	<h2>Module 10</h2>
+
+
+
 </body>
+
 </html>
