Primitives Shapes - line

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 		<li>
 			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a>
 		</li>
+		<li>
+			<a href="module08/ex823.html" target="_blank">Ex823 - A primitives Shapes -ellipes</a>
+		</li>
+		<li>
+			<a href="module08/ex824.html" target="_blank">Ex824 - A primitives Shapes - lines</a>
+		</li>
 	</ul>
 	<h2>Module 9</h2>
 	<h2>Module 10</h2>
