--- a/index.html
+++ b/index.html
@@ -15,10 +15,25 @@
 			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a>
 		</li>
 		<li>
-			<a href="module08/ex823.html" target="_blank">Ex823 - A primitives Shapes -ellipes</a>
+			<a href="module08/ex823.html" target="_blank">Ex823 - primitives Shapes -ellipes</a>
 		</li>
 		<li>
-			<a href="module08/ex824.html" target="_blank">Ex824 - A primitives Shapes - lines</a>
+			<a href="module08/ex824.html" target="_blank">Ex824 - primitives Shapes - lines</a>
+		</li>
+		<li>
+			<a href="module08/ex825.html" target="_blank">Ex825 - primitives Shapes - points</a>
+		</li>
+		<li>
+			<a href="module08/ex826.html" target="_blank">Ex826 - primitives Shapes - rectangular</a>
+		</li>
+		<li>
+			<a href="module08/ex827.html" target="_blank">Ex827 - primitives Shapes - triangle</a>
+		</li>
+		<li>
+			<a href="module08/ex828.html" target="_blank">Ex828 - motion</a>
+		</li>
+		<li>
+			<a href="module08/ex832.html" target="_blank">Ex832 - color rules</a>
 		</li>
 	</ul>
 	<h2>Module 9</h2>
