--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 		<li>
 			<a href="module08/ex832.html" target="_blank">Ex832 - color rules</a>
 		</li>
+		<li>
+			<a href="module08/ex833.html" target="_blank">Ex833 - color rules</a>
+		</li>
 	</ul>
 	<h2>Module 9</h2>
 	<h2>Module 10</h2>
