mouseX and mouseY

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 		</li>
 	</ul>
 	<h2>Module 9</h2>
+	<ul>
+		<li>
+			<a href="module09/ex912.html" target="_blank">Ex912 - Mouse Position</a>
+		</li>
+	</ul>
 	<h2>Module 10</h2>
 
 
