--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 		<li>
 			<a href="module09/ex912.html" target="_blank">Ex912 - Mouse Position</a>
 		</li>
+		<li>
+			<a href="module09/ex913.html" target="_blank">Ex913 - mouseClicked</a>
+		</li>
 	</ul>
 	<h2>Module 10</h2>
 
