--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		<li>
 			<a href="module09/ex913.html" target="_blank">Ex913 - mouseClicked</a>
 		</li>
+		<li>
+			<a href="module09/ex914.html" target="_blank">Ex914 - mouseIsPressed</a>
+		</li>
 	</ul>
 	<h2>Module 10</h2>
 
