noloop and loop

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 		<li>
 			<a href="module09/ex914.html" target="_blank">Ex914 - mouseIsPressed</a>
 		</li>
+		<li>
+			<a href="module09/ex921.html" target="_blank">Ex921 - noLoop and loop</a>
+		</li>
 	</ul>
 	<h2>Module 10</h2>
 
