--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 			<a href="module09/ex914.html" target="_blank">Ex914 - mouseIsPressed</a>
 		</li>
 		<li>
-			<a href="module09/ex921.html" target="_blank">Ex921 - noLoop and loop</a>
+			<a href="module09/ex921.html" target="_blank">Ex921 - noLoop</a>
+		</li>
+		<li>
+			<a href="module09/ex922.html" target="_blank">Ex922 - redraw</a>
 		</li>
 	</ul>
 	<h2>Module 10</h2>
