--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 		<li>
 			<a href="module09/ex922.html" target="_blank">Ex922 - redraw</a>
 		</li>
+		<li>
+			<a href="module09/ex923.html" target="_blank">Ex923 - clear</a>
+		</li>
 	</ul>
 	<h2>Module 10</h2>
 
