translate and rotate

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 		<li>
 			<a href="module09/ex923.html" target="_blank">Ex923 - clear</a>
 		</li>
+		<li>
+			<a href="module09/ex924.html" target="_blank">Ex924 - translate</a>
+		</li>
+		<li>
+			<a href="module09/ex925.html" target="_blank">Ex925 - random</a>
+		</li>
 	</ul>
 	<h2>Module 10</h2>
 
