--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
 		</li>
 	</ul>
 	<h2>Module 10</h2>
+	<ul>
+		<li>
+			<a href="module09/ex1012.html" target="_blank">Ex1012 - get() and set()</a>
+		</li>
+
+		<li>
+			<a href="module09/ex1013.html" target="_blank">Ex1013 - pixels array()</a>
+		</li>
+	</ul>
 
 
 
