play with video

--- a/index.html
+++ b/index.html
@@ -69,11 +69,20 @@
 	<h2>Module 10</h2>
 	<ul>
 		<li>
-			<a href="module09/ex1012.html" target="_blank">Ex1012 - get() and set()</a>
+			<a href="module10/ex1012.html" target="_blank">Ex1012 - get() and set()</a>
 		</li>
 
 		<li>
-			<a href="module09/ex1013.html" target="_blank">Ex1013 - pixels array()</a>
+			<a href="module10/ex1013.html" target="_blank">Ex1013 - pixels array</a>
+		</li>
+
+
+		<li>
+			<a href="module10/ex1021.html" target="_blank">Ex1021 - Insert video</a>
+		</li>
+
+		<li>
+			<a href="module10/ex1022.html" target="_blank">Ex1022 - play with video</a>
 		</li>
 	</ul>
 
