--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
 		<li>
 			<a href="module10/ex1022.html" target="_blank">Ex1022 - play with video</a>
 		</li>
+
+		<li>
+			<a href="module10/ex1023.html" target="_blank">Ex1023 - createCapture()</a>
+		</li>
+
+		<li>
+			<a href="module10/ex1031.html" target="_blank">Ex1031 - load and play sound()</a>
+		</li>
+
+		<li>
+			<a href="module10/ex1032.html" target="_blank">Ex1032 - play and pause buttons</a>
+		</li>
+
+		<li>
+			<a href="module10/ex1033.html" target="_blank">Ex1033 - capture sound</a>
+		</li>
 	</ul>
 
 
